--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -48,32 +48,37 @@
 			<div class="col-md-2"></div>
 			<div class="profile-preview summary-column col-md-8">
 				<div class="work-preview-header row">
-					<h3 class="col-md-12 text-center" id="selections">Selections of Laurie's Work</h3>
+					<h3 class="col-md-12 text-center" id="selections">{{organisation.name}}'s Opportunities </h3>
 				</div>
 
-				<div class="work-wrapper row" ng-repeat="work in user.workSelection">
+				<div class="work-wrapper row" ng-repeat="opp in organisation.opportunities">
 						
 					<div class="work-preview-info col-md-9" ng-class="{ 'story': profile.selection == storyPreview }">
 						<div id="info">
-							<h1 class="preview-title">{{work.title}}</h1>
-											from {{work.collection}}
-							<p class="short-description">{{work.caption}}</p>
+							<h1 class="preview-title">{{opp.title}}</h1>
+		
+							<p class="short-description">{{opp.description}}</p>
 							<div class="additional-info">
-								<p class="recommendation-number" ng-class="{ 'story': profile.selection == storyPreview }">{{work.recommendations}}</p>
-								<p ng-class="{ 'cool-information' : work.commissionedOrFeatured, 'anthology' : work.anthology, 'single-author' : work.singleAuthor}">{{work.additionalInformation}}</p>
+								<p>{{opp.requirements}}</p>
+								<a href="/organisations/{{organisation.id}}/opportunities/{{opp.id}}/submission/new">Submit To {{opp.title}}</a>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-md-3">	
 						<div class="preview-pic pic-wrapper">
-							<img class="selection" id="profile-pic" ng-src="{{work.image}}">
+							<img class="selection" id="profile-pic" ng-src="{{opp.image}}">
 						</div>
 						<div class="hr-wrapper"><hr id="after-work" ng-show="!$last">
 						</div>
 					</div>	
 
 				</div>
+				<% if @organisation.users.include? current_user %>
+				<div class="work-preview-header row">
+					<h3 class="col-md-12 text-center" id="selections"><%= link_to 'Create Opportunity', new_organisation_opportunity_path(@organisation) %></h3>
+				</div>
+				<% end %>
 			</div>	<!-- end of .profile-preview and col-md-6 -->
 			<div class="col-md-2"></div>
 		</div>
