About to start trying to change the _writing html

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -254,6 +254,10 @@ div.work-preview div.work-preview-header {
 	margin-bottom: 20px;
 }
 
+h1.preview-title {
+	font-family: Lato;
+}
+
 h3#selections {
 	font-size: 11px;
 	text-align: center;
