--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -8,7 +8,7 @@
 	<% end %>
 
 	<div class="summary row" id="summary-section">
-		<div class="col-md-6">
+		<div class="col-md-6 left-hand-side">
 			<div class="col-md-3"></div>
 			<div class="profile-info summary-column col-md-3 col-md-offset-2">
 				<div class="info-wrapper row col-md-12">
@@ -44,7 +44,7 @@
 
 			<!-- </div> end of .profile-info -->
 
-		<div class="col-md-6">
+		<div class="col-md-6 right-hand-side">
 			<div class="col-md-2"></div>
 			<div class="profile-preview summary-column col-md-8">
 				<div class="work-preview-header row">
