Art field done. Form field improved for both art and writing

--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -8,6 +8,7 @@
   max-width: 970px !important;
 }
 
+
 body, a{
   color: black !important;
 }
@@ -143,6 +144,10 @@ div.work-container {
   width: 75%;
   margin: 0 auto;
   margin-top: 5%;
+}
+
+div.collection-display:focus {
+  outline: none;
 }
 
 
