--- a/app/views/works/_art.html.erb
+++ b/app/views/works/_art.html.erb
@@ -6,12 +6,10 @@
 		<div class="col-md-2" ng-hide="details"></div>
 			<div class="input-wrapper col-md-8">
 			 	<div class="field-wrapper col-md-12">
-						<div class="file-field">
-							<!-- <div class="col-md-12"> -->
-								<%= f.label :image, 'Thumbnail', class: 'thumbnail-label' %>
+						<div class="image-field file-field">
+								<%= f.label :image, 'Drag Work Here', class: 'call-to-drag' %>
 								<%= f.file_field :image, required: true, data: {:"ng-file-select" => "onFileSelect($files)"}%>
-									<img ng-show="imageSrc" ng-src="{{imageSrc}}" />
-							<!-- </div> -->
+									<img class="upload-preview" ng-show="imageSrc" ng-src="{{imageSrc}}" />
 						</div>
 					</div>
 			</div>
@@ -23,12 +21,6 @@
 	<div class="submit-details col-md-4">
 		
 
-			<div id="test" style="visibility: hidden; text-indent: -9999px;">
-
-			<%= f.label :text %>
-			<%= f.text_field :text, id: 'texteditor', data: { :'ng-model' => 'text'} %>
-			</div>
-
 			<div class="submit-ready pull-right col-md-2" ng-init="details = false" ng-click="details = !details">
 				<a href="#" class="add-details art-submit"><p>Add Details</p></a>
 			</div>
@@ -38,7 +30,7 @@
 
 				<div class="row">
 					<div class="col-md-12 title-field">
-						<%= f.text_area :title, required: true, placeholder: 'Title', class: 'col-md-12' %>
+						<%= f.text_area :title, required: true, placeholder: 'Title', class: 'col-md-12', onkeyup: "textAreaAdjust(this)" %>
 					</div>
 				</div>
 
@@ -49,7 +41,7 @@
 				<div class="row">
 					<div class="col-md-12 genre-field">
 
-						<%= f.text_area :medium_names, value: '', placeholder: 'Media', class: 'col-md-12' %>
+						<%= f.text_area :medium_names, value: '', placeholder: 'Media', class: 'col-md-12', onkeyup: "textAreaAdjust(this)" %>
 					</div>
 				</div>
 
@@ -57,7 +49,7 @@
 				<div class="row">
 					<div class="col-md-12 genre-field">
 
-						<%= f.text_area :genre_names, value: '', placeholder: 'Genre', class: 'col-md-12' %>
+						<%= f.text_area :genre_names, value: '', placeholder: 'Genre', class: 'col-md-12', onkeyup: "textAreaAdjust(this)" %>
 					</div>
 				</div>
 
@@ -68,7 +60,7 @@
 					</div>
 				</div>
 
-				<div class="row">
+				<div class="button-row row">
 					<div class="col-md-12 submit-button">
 						<%= f.submit 'Publish', class: 'form-submit' %>
 					</div>
