--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,10 @@
  *= require medium-editor
  *= require medium-flat.min
  *= require bootstrap
+ *= require bootstrapValidator.min
+ *= require ladda-themeless.min
+ *= require animate.min
+ *= require app
  *= require_tree .
  *= require_self
  */
@@ -21,6 +25,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+
+body {
+	background: image-url('background/1.jpg')
+}
 
 .log-out {
 	position: fixed;
@@ -41,3 +49,12 @@
 p {
 	font-family: 'Merriweather', serif;
 }
+
+
+
+
+
+
+
+
+
