--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -62,7 +62,7 @@ body, a{
 .btn, .btn:hover, .btn:visited{
   border-radius: 0px !important;
   border: 0px;
-  background-color: #000 !important;
+/*  background-color: #000 !important;*/
   color: #fff;
 }
 a.visit-collection{
