--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -59,8 +59,12 @@
 		
 							<p class="short-description">{{opp.description}}</p>
 							<div class="additional-info">
-								<p>{{opp.requirements}}</p>
+								<p>Accepting {{opp.requirements}}</p>
 								<a href="/organisations/{{organisation.id}}/opportunities/{{opp.id}}/submission/new">Submit To {{opp.title}}</a>
+								<br>
+								<% if @organisation.users.include? current_user %>
+									<a href="/organisations/{{organisation.id}}/opportunities/{{opp.id}}/submissions">View Submissions</a>
+								<% end %>
 							</div>
 						</div>
 					</div>
