--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 						</div>
 						<div class="pic-wrapper">
 							<% if current_user.avatar.present? %>
-							<img class="profile-pic" ng-hide="imageSrc" id="profile-pic" ng-src="{{user.userImage}}">
+							<img class="profile-pic" ng-hide="editable || imageSrc" id="profile-pic" ng-src="{{user.userImage}}">
 							<% end %>
 							<img ng-show="imageSrc" class="profile-pic" id="profile-pic" ng-src="{{imageSrc}}">
 						</div>
