--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -33,16 +33,16 @@ img.editable-pic {
 	opacity: 0.4;
 }
 
-div.profile-wrapper {
-
+img.profile-pic {
+	z-index: 1;
+	border-radius: 100%;
 }
 
-div.body-wrapper {
 
-	/*height: 100%;*/
-	/*padding-top: 10%*/
+.file-field.profile-image {
+	width: 150px;
+	height: 150px;
 }
-
 
 button:focus {
 	outline: none;
