--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
 							<%= f.submit class: 'image-submit' %>
 							<% end %>
 						</div>
-						<div class="pic-wrapper">
+						<div class="pic-wrapper" ng-hide="editable">
 							<% if current_user.avatar.present? %>
 							<img class="profile-pic" ng-hide="imageSrc" id="profile-pic" ng-src="{{user.userImage}}">
 							<% end %>
