added login with facebook/twitter working buttons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,11 +50,44 @@ p {
 	font-family: 'Merriweather', serif;
 }
 
+.sign-in-facebook {
+	position: fixed;
+	top: 40px;
+	right: 60px;
+	font-size: 40px;
+	z-index: 100;
+	i {
+		color: white;
+	}
+}
+
+.sign-in-facebook:hover i {
+	color: black;
+}
 
 
+.sign-in-twitter {
+	position: fixed;
+	top: 40px;
+	right: 120px;
+	font-size: 40px;
+	z-index: 100;
+	i {
+		color: white;
+	}
+}
+
+.sign-in-twitter:hover i {
+	color: black;
+}
 
 
+.social-btn {
+	i {
+		color: white;
+	}
+}
 
-
-
-
+.social-btn:hover i {
+	color: black;
+}
