--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -59,8 +59,10 @@
 		
 							<p class="short-description">{{opp.description}}</p>
 							<div class="additional-info">
-								<p>{{opp.requirements}}</p>
+								<p>Accepting{{opp.requirements}}</p>
 								<a href="/organisations/{{organisation.id}}/opportunities/{{opp.id}}/submission/new">Submit To {{opp.title}}</a>
+								<br>
+								<a href="/organisations/{{organisation.id}}/opportunities/{{opp.id}}/submissions">View Submissions for {{opp.title}}</a>
 							</div>
 						</div>
 					</div>
