Backstretch now compatibly with rest of app. Social buttons not working

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,9 +26,9 @@
 @import "bootstrap";
 @import "font-awesome";
 
-body {
-	background: image-url('background/1.jpg')
-}
+/*body {
+	background-image: none;
+}*/
 
 .log-out {
 	position: fixed;
