--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
 
 		<% current_user.organisations.each do |org| %>
 
-			<%= link_to org.name, organisation_path(org) %>
+			<%= link_to "#{org.name}", organisation_path(org) %>
 			
 		<% end %>
 
