--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@
 
 
 <% if user_signed_in? %>
-<input style="display: none" type="search" class="search" ng-model="search" placeholder="Search...">
+<!-- <input style="display: none" type="search" class="search" ng-model="search" placeholder="Search...">
 
-<!-- 	<div ng-show="search" ng-repeat="user in users | filter:search" class="users">
+	<div ng-show="search" ng-repeat="user in users | filter:search" class="users">
 		<p>{{user.name}}</p>
 		<p>{{user.profession}}</p>
 		<p>{{user.network}}</p>
@@ -29,7 +29,23 @@
 	
 	</div>
  -->
-<%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'log-out', style: 'display:none' %>
+
+	<button id="trigger-overlay" class="btn btn-primary" type="button">Open Overlay</button></p>
+
+		<div class="overlay overlay-slidedown">
+			<button type="button" class="overlay-close">Close</button>
+			<nav>
+				<ul>
+					<li><a href="#">Profile</a></li>
+					<li><a href="#">Search</a></li>
+					<li><a href="#">Your Submissions</a></li>
+					<li><a href="#">Received Submissions</a></li>
+				</ul>
+			</nav>
+		</div>
+
+
+<%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'log-out' %>
 
 <% end %>
 
