--- a/app/assets/stylesheets/works.css.scss
+++ b/app/assets/stylesheets/works.css.scss
@@ -168,7 +168,7 @@ div.title-field textarea::-webkit-input-placeholder, div.title-field textarea {
 
 div.genre-field textarea::-webkit-input-placeholder, div.description-field textarea::-webkit-input-placeholder, div.genre-field textarea, div.description-field textarea {
 	font-family: Merriweather, serif;
-	color: black !important;
+	color: black;
 	opacity: 1;
 }
 
