--- a/app/assets/stylesheets/works.css.scss
+++ b/app/assets/stylesheets/works.css.scss
@@ -98,6 +98,7 @@ div.submit-details {
 	/*position: relative;*/
 	float: none;
 	margin: 0 auto;
+		/*background-color: black;*/
 }
 
 .file-field{
@@ -113,9 +114,10 @@ div.submit-details {
   font: normal 14px 'Lato' sans-serif;
   text-align: center;
   vertical-align: middle;
-  color: #7f7f7f;
+  color: white;
   margin-top: 2px;
-	background: transparent;
+	/*background: transparent;*/
+	background-color: black;
 }
 
 .file-field input[type="file"]{
@@ -210,9 +212,7 @@ div.button-row {
 }
 
 div.form-wrapper input.form-submit {
-	/*margin-top: 50%;*/
 	margin: 0 auto;
-	/*text-align: center;*/
 	background: none;
 	border: 1px solid rgba(0,0,0,0.4);
 	border-radius: 50px;
