--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -29,7 +29,7 @@
 
 			<div class="row">
 				<div class="col-md-12 description-field org-desc-field">
-			<%= f.text_area :description, placeholder: 'Tell people about your opportunity' %>
+			<%= f.text_area :description, placeholder: 'Describe your opportunity' %>
 				</div>
 			</div>
 
