--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,10 +8,10 @@
 	<div class="body-wrapper section">
 	<div class="summary row" id="summary-section">
 		<div class="col-md-6 left-hand-side">
-			<div class="col-md-3"></div>
-			<div class="profile-info summary-column col-md-3 col-md-offset-2">
+			<div class="col-md-4"></div>
+			<div class="profile-info summary-column col-md-4 col-md-offset-1">
 				<div class="info-wrapper row col-md-12">
-					<div class="picture-options row">
+					<div class="picture-options row col-md-12">
 						<div class="change-profile-pic" ng-show="editable">
 							<%= form_for @user, html: {multipart: true} do |f| %>
 							<div class="file-field profile-image">
@@ -35,7 +35,7 @@
 						</p>
 					</div>	
 				</div>
-			<div class="col-md-3"></div>
+			<div class="col-md-4"></div>
 		</div>
 
 
