--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -193,8 +193,9 @@ hr {
 	color: black;
 	padding: 0;
 	width: 50px;
-	margin-left: auto;
-	margin-right: auto;
+/*	margin-left: auto;
+	margin-right: auto;*/
+	margin: 0 auto;
 
 }
 
@@ -385,9 +386,9 @@ p.recommendation-number.story {
 	margin-right: 2px;
 }
 
-hr#after-work {
+/*hr#after-work {
 	margin: 25px 0px 25px 25px;
-}
+}*/
 
 /*-------PORTFOLIO---------*/
 
