--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,4 +1,20 @@
-<% @opportunity.submissions.each do |submission| %>
-	<%= submission.work.title %>
-	<%= submission.work.user.name %>
+<div class="container">
+<% if @opportunity.submissions.none? %>
+	No submissions yet
+<% else %>
+
+	<div class="row">
+		<h1 class="name subs">Submissions For <%= @opportunity.title %> </h1>
+	</div>
+
+
+	<% @submissions.in_groups_of(3, false) do |submission_triplet| %>
+		<div class="row">
+			<%= render submission_triplet %>
+		</div>
+	<% end %>
+
 <% end %>
+
+
+</div>
